<?xml version="1.0"?>
<package format="2">
  <name>mrs_manipulator</name>
  <version>0.0.0</version>
  <description>The mrs_manipulator package</description>

  <maintainer email="horynjir@fel.cvut.cz">horynjir</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
